feat: adding initial Bloc configuration

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: any
+  equatable: 
+  flutter_bloc:
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # La siguiente línea agrega el paquete Cupertino Icons a tu aplicación.
+  # Úsalo con la clase CupertinoIcons para iconos de estilo iOS.
   cupertino_icons: ^1.0.6
+
 
 dev_dependencies:
   flutter_test:
